# paperemind

./: README.md  main.py  pyproject.toml
paperemind/: SemanticScholar.py  __init__.py  output.py
